--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -12,11 +12,10 @@
 
   <tbody>
     <% @places.each do |place| %>
+      <% photo=place.photos.sample %>
       <tr>
         <td><%= place.formatted_address %></td>
         <td><%= link_to 'Show', place %></td>
-        <td><%= link_to 'Edit', edit_place_path(place) %></td>
-        <td><%= link_to 'Destroy', place, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +23,3 @@
 
 <br>
 
-<%= link_to 'New Place', new_place_path %>
