--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -15,6 +15,9 @@
       <% photo=place.photos.sample %>
       <tr>
         <td><%= place.formatted_address %></td>
+        <% if photo %>
+          <td><img height="50px" width="65px" src= <%= photos_show_path("#{photo.id}")%>/></td>
+        <% end %>
         <td><%= link_to 'Show', place %></td>
       </tr>
     <% end %>
